--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main .container {
   height: min-content;
 }
 
+/* Task Input Styling */
 .container .task-input {
   border-bottom: 2px solid var(--grey-color);
   padding: 1.5rem;
@@ -43,7 +44,7 @@ main .container {
   border: 1px solid var(--grey-color);
   border-radius: 0.3rem;
   padding: 0.5rem;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 .task-input .input-container i {
@@ -100,10 +101,44 @@ main .container {
   height: 2rem;
 }
 
+/* Tasks Section Styling */
 .container .tasks-list {
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .container .tasks-list p.placeholder-task{
   font-size: 0.8rem;
+}
+
+.tasks-list .task {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.task .task-left {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.task-left input {
+  width: 1rem;
+  height: 1rem;
+}
+
+.task-left p {
+  width: 19rem;
+  word-wrap: break-word;
+}
+
+.task .task-right button {
+  border: none;
+  background: none;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
