--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ main .container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-height: 500px;
+  overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 .container .tasks-list p.placeholder-task{
