--- a/style.css
+++ b/style.css
@@ -12,24 +12,25 @@
   --white-color: #fff;
   --black-color: #000;
   --grey-color: rgba(160, 160, 160, 0.5);
+  --shadow-color: rgb(100, 100, 100);
 
   --primary-color: rgb(0, 200, 183);
   --primary-color-hover: rgba(0, 200, 183, 0.75);
 }
 
 /* Main Content Styling */
-body main {
-  background: var(--primary-color);
+body {
+  background-color: var(--primary-color);
   height: 100vh;
-  display: flex;
-  justify-content: center;
   padding: 8rem 1rem;
 }
 
-main .container {
+body .container {
   background: var(--white-color);
   border-radius: 0.5rem;
-  height: min-content;
+  box-shadow: 0 0 20px var(--shadow-color);
+  margin: 0 auto;
+  width: 420px;
 }
 
 /* Task Input Styling */
@@ -108,8 +109,6 @@ main .container {
   flex-direction: column;
   gap: 1rem;
   max-height: 500px;
-  overflow-y: auto;
-  scrollbar-width: thin;
 }
 
 .container .tasks-list p.placeholder-task{
@@ -139,9 +138,38 @@ main .container {
   word-wrap: break-word;
 }
 
+.task .task-right {
+  position: relative;
+}
+
 .task .task-right button {
   border: none;
   background: none;
   font-size: 1.2rem;
   cursor: pointer;
+}
+
+.task-right .edit-popup {
+  background: var(--white-color);
+  box-shadow: 0 0 5px var(--shadow-color);
+  list-style: none;
+  position: absolute;
+  right: 20px;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.task-right .edit-popup.hidden {
+  display: none;
+}
+
+.task-right .edit-popup li {
+  display: flex;
+  gap: 0.2rem;
+}
+
+.edit-popup li.delete {
+  color: red;
 }
